<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_nav_events"
        android:title="@string/nav_events" />
    <item
        android:id="@+id/nav_clock"
        android:icon="@android:drawable/ic_lock_idle_alarm"
        android:title="@string/nav_clock" />
    <item
        android:id="@+id/nav_notes"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_notes" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>